# go-compiler

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  pyproject.toml  requirements.txt
.github/workflows/: unit_test.yml
3rd/: CMakeLists.txt
CSV/: CMakeLists.txt
CSV/grammar/: CSV.g4
CSV/include/: myCSVListener.h
CSV/src/: main.cpp  myCSVListener.cpp
DOT/grammar/: DOT.g4
R/: R.sh
R/grammar/: R.g4
Symbol/: Cymbol.g4  test_max.cymbol  test_sort.cymbol
assets/CSV/: test1.csv  test2.csv
assets/R/: 1.R
assets/json/: 1.json  2.json
demo/: 02calculate.go  04for.go  array.go  assign1.go  for.go  func.go  if.go  test.go
example/: array.go  assign.go  if.go
g4/: GOlexer.g4  GOparser.g4
go23/: .gitignore  CMakeLists.txt
go23/grammar/: GoParser.g4  calculate.go  test.go
go23/grammar/java-g4/: GoParser.interp  calculate.go
go23/include/: Common.h  Scope.h  Symbol.h  SymbolTabel.h  TAC.h  myGoListener.h
go23/include/TCG/: ASM.h  BlockTranslator.h
go23/src/go23/: Scope.cpp  Symbol.cpp  main.cpp  myGoListener.cpp
go_compiler/: __main__.py
go_compiler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
go_compiler/common/: REG.py  Scope.py  UseInfo.py  common.py  tac.py
go_compiler/icg/: MyGoListener.py  utils.py
go_compiler/icg/statement_icg/: ForStatement.py
go_compiler/logger/: logger.py
go_compiler/tcg/: BlockTranslator.py  SymbolManager.py  Translator.py  asm.py  construct_asm.py
go_compiler/tcg/sentence_translator/: AssignTranslator.py  BaseTranslator.py  CallTranslator.py  CommonTranslator.py  CreatelistTranslator.py  FunparaTranslator.py  FunretTranslator.py  GotoTranslator.py  IfTranslator.py  LabelTranslator.py  MulTranslator.py  ParaTranslator.py  RetTranslator.py  __init__.py
grammar/: calculate.go  test.go  test2.go
include/: ASM.h  BlockTranslator.h  Common.h  SymbolManager.h  SymbolTabel.h  TAC.h  Translator.h
include/Common/: Common.h  REG.h  Scope.h  Symbol.h  TAC.h  UseInfo.h
include/ICG/: Utils.h  myGoListener.h
include/ICG/StmtICG/: ForStmt.h
include/SentenceTranslator/: BaseTranslator.h
include/TCG/: ASM.h  BlockTranslator.h  ConstructASM.h  SymbolManager.h  Translator.h
include/TCG/SentenceTranslator/: AssignTranslator.h  BaseTranslator.h  CallTranslator.h  CommonTranslator.h  CreatelistTranslator.h  FunparaTranslator.h  FunretTranslator.h  GotoTranslator.h  IfTranslator.h  LabelTranslator.h  MulTranslator.h  ParaTranslator.h  RetTranslator.h
json/: CMakeLists.txt  json.sh
json/grammar/: Json.g4
json/include/: translator.h
json/src/: main.cpp  translator.cpp
qt_ui/01_qfile/: 01_qfile.pro  highlighter.cpp  widget.cpp  widget.h  widget.ui
qt_ui/build-01_qfile-unknown-Debug/: 01_qfile  Makefile  moc_highlighter.cpp  moc_widget.cpp  out.asm  ui_widget.h
scripts/: antlr_generate.sh  compile_go_testcases.sh  run_asm.sh
src/: BlockTranslator.cpp  CMakeLists.txt  SymbolManager.cpp  SymbolTabel.cpp  Translator.cpp
src/Common/: CMakeLists.txt  REG.cpp  Scope.cpp  TAC.cpp
src/ICG/: CMakeLists.txt  Scope.cpp  Symbol.cpp  myGoListener.cpp
src/TCG/: BlockTranslator.cpp  CMakeLists.txt  SymbolManager.cpp  Translator.cpp
src/TCG/SentenceTranslator/: AssignTranslator.cpp  BaseTranslator.cpp  CallTranslator.cpp  CommonTranslator.cpp  CreatelistTranslator.cpp  FunparaTranslator.cpp  FunretTranslator.cpp  GotoTranslator.cpp  IfTranslator.cpp  LabelTranslator.cpp  MulTranslator.cpp  ParaTranslator.cpp  RetTranslator.cpp
src/go23/grammar/: calculate.go  test.go
src/go23/grammar/java-g4/: GoLexer.g4  GoLexer.java  GoParser.g4  GoParser.java  GoParserBaseListener.java  GoParserListener.java  calculate.go
src/go23/include/: BaseScope.h  Scope.h  Symbol.h  myGoListener.h
src/go23/include/TCG/: Translator.h
src/go23/src/go23/: main.cpp  myGoListener.cpp
test/: CMakeLists.txt  SymbolManager.cpp  example.cpp  icg.cpp
test/Common/: CMakeLists.txt  symbol.cpp
test/TCG/: CMakeLists.txt  SymbolManager.cpp
test/testdata/: 01assign.go  03if.go  05func.go  06array.go
test_asm/: print.asm
tests/: test_icg.py  test_sample.py  test_tcg.py  test_tcg_one.py  utils.py
tests/testdata/go_3code/: 01assign.3code  02calculate.3code  03if.3code  04for.3code  05func.3code  06array.3code
tests/testdata/go_source/: 01assign.go  02calculate.go  06array.go
