[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "go_compiler"
version = "0.0.0"
description = "A simple compiler implementation for the Go programming language"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# extra dependencies
[project.optional-dependencies]
dev = [
    "pytest~=7.4.3",
    "pytest-cov~=4.1.0"
]
